--- a/404.html
+++ b/404.html
@@ -30,18 +30,18 @@
         <div class="utility-page-content">
           <h1>Page not found</h1>
           <div>The page you are looking for doesn't exist or has been moved.</div>
-        </div><a class="btn w-button" href="index.html">Go to homepage</a>
+        </div><a class="btn w-button" href="/">Go to homepage</a>
       </div>
       <div class="right-wrapper">
-        <a class="sb1 small-block w-inline-block" href="about.html">
+        <a class="sb1 small-block w-inline-block" href="/about">
           <div class="link-text">About</div>
         </a>
-        <a class="sb2 small-block w-inline-block" href="projects.html">
+        <a class="sb2 small-block w-inline-block" href="/projects">
           <div class="link-text">Projects</div>
         </a>
       </div>
     </div>
-    <a class="bottom-block w-inline-block" href="contact.html">
+    <a class="bottom-block w-inline-block" href="/contact">
       <div class="link-text">Contact</div>
     </a>
   </div>
