--- a/about.html
+++ b/about.html
@@ -38,15 +38,15 @@
         <p>Although I have a day job, I am open for freelance work.</p>
       </div>
       <div class="right-wrapper">
-        <a class="highlighted sb1h small-block w-inline-block" href="index.html">
+        <a class="highlighted sb1h small-block w-inline-block" href="/">
           <div class="link-text">&lt; Home</div>
         </a>
-        <a class="sb2 small-block w-inline-block" href="projects.html">
+        <a class="sb2 small-block w-inline-block" href="/projects">
           <div class="link-text">Projects</div>
         </a>
       </div>
     </div>
-    <a class="bottom-block w-inline-block" href="contact.html">
+    <a class="bottom-block w-inline-block" href="/contact">
       <div class="link-text">Contact</div>
     </a>
   </div>
