--- a/contact.html
+++ b/contact.html
@@ -70,15 +70,15 @@
         </div>
       </div>
       <div class="right-wrapper">
-        <a class="sb1 small-block w-inline-block" href="about.html">
+        <a class="sb1 small-block w-inline-block" href="/about">
           <div class="link-text">About</div>
         </a>
-        <a class="sb2 small-block w-inline-block" href="projects.html">
+        <a class="sb2 small-block w-inline-block" href="/projects">
           <div class="link-text">Projects</div>
         </a>
       </div>
     </div>
-    <a class="bottom-block highlighted w-inline-block" href="index.html">
+    <a class="bottom-block highlighted w-inline-block" href="/">
       <div class="link-text">&lt; Home</div>
     </a>
   </div>
