--- a/index.html
+++ b/index.html
@@ -35,15 +35,15 @@
         <h2>Product manager focused on delivering high quality product, branding and digital solutions.</h2>
       </div>
       <div class="right-wrapper">
-        <a class="sb1 small-block w-inline-block" href="about.html">
+        <a class="sb1 small-block w-inline-block" href="/about">
           <div class="link-text">About</div>
         </a>
-        <a class="sb2 small-block w-inline-block" href="projects.html">
+        <a class="sb2 small-block w-inline-block" href="/projects">
           <div class="link-text">Projects</div>
         </a>
       </div>
     </div>
-    <a class="bottom-block w-inline-block" href="contact.html">
+    <a class="bottom-block w-inline-block" href="/contact">
       <div class="link-text">Contact</div>
     </a>
   </div>
