--- a/projects.html
+++ b/projects.html
@@ -70,15 +70,15 @@
         <p>More coming soon...</p>
       </div>
       <div class="right-wrapper">
-        <a class="sb1 small-block w-inline-block" href="about.html">
+        <a class="sb1 small-block w-inline-block" href="/about">
           <div class="link-text">About</div>
         </a>
-        <a class="highlighted sb2h small-block w-inline-block" href="index.html">
+        <a class="highlighted sb2h small-block w-inline-block" href="/">
           <div class="link-text">&lt; Home</div>
         </a>
       </div>
     </div>
-    <a class="bottom-block w-inline-block" href="contact.html">
+    <a class="bottom-block w-inline-block" href="/contact">
       <div class="link-text">Contact</div>
     </a>
   </div>
