--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
       <div class="content main-block" data-ix="fade-in">
         <h1 class="small-h1">About me</h1>
         <p>I'm Isaac Kleinbart, a product and branding specialist.</p>
-        <p>I work across a wide array of company and product types; from small business developments to large scale commercial projects.</p>
+        <p>I work across a wide array of company and product types; from small business to large scale commercial projects.</p>
         <p>I have experience creating and managing various creative and marketing fields that brands and companies often need, such as brand identity, web design, web development, copywriting, print materials and product imagery.</p>
         <p>Although I have a day job, I am open for freelance work.</p>
       </div>
