--- a/404.html
+++ b/404.html
@@ -3,10 +3,10 @@
   <meta charset="utf-8">
   <meta name="robots" content="noindex">
   <script type="text/javascript">
-    window.location.replace("https://timothystone.com/collections/gala-stainless");
+    window.location.replace("https://www.linkedin.com/in/isaac-kleinbart/");
   </script>
 </head>
 <body>
-Go to https://timothystone.com/collections/gala-stainless
+Go to https://www.linkedin.com/in/isaac-kleinbart/
 </body>
 </html>
